# TA-pushover

./: .gitignore  README.md  SECURITY.MD  SECURITY.md  TA-pushover.tgz  app_test.py  docker-compose.yml  globalConfig.json  justfile  package.sh  pushover.py  pyproject.toml  requirements.txt  ucc-build.sh
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  package-splunk-app.yml  pylint.yml  pytest.yml
TA-pushover/: README.txt  app.manifest
TA-pushover/README/: alert_actions.conf.spec  ta_pushover_settings.conf.spec
TA-pushover/default/: alert_actions.conf  app.conf  props.conf  restmap.conf  web.conf
TA-pushover/default/data/ui/alerts/: pushover.html
TA-pushover/default/data/ui/views/: configuration.xml  inputs.xml
package/: app.manifest
package/README/: restmap.conf.spec
package/default/: alert_actions.conf  app.conf  commands.conf  searchbnf.conf
package/lib/: requirements.txt
tests/: test_nothing.py  test_ta_pushover.py
