[project]
name = "ta-pushover"
version = "0.0.2"
description = "Pushover App for Splunk"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.9"
dependencies = [
    "httplib2>=0.22.0",
    "requests>=2.31.0",
    "solnlib>=4.14.1",
    "splunk-sdk>=2.1.0",
    "splunktaucclib>=6.2.0",
]

[dependency-groups]
dev = [
    "click>=8.1.8",
    "codespell>=2.4.1",
    "ksconf>=0.13.9",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pip>=25.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "splunk-add-on-ucc-framework>=5.59.0",
    "types-requests>=2.31.0.6",
]

[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 200

[tool.mypy]
mypy_path = ["package/bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
